# Specter-Engine

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
filesbuild/include/glad/: glad.h
filesbuild/src/: glad.c
src/: main.cpp
src/UI/: createprojectdialog.cpp  createprojectdialog.h  editorwindow.cpp  editorwindow.h  startupdialog.cpp  startupdialog.h  terminalwidget.cpp  terminalwidget.h
src/kernel/: kernel.cpp  kernel.h
src/kernel/directx/: directx.cpp  directx.h
src/kernel/opengl/: opengl.cpp  opengl.h
src/kernel/vulkan /: vulkan.cpp  vulkan.h
